[tool.poetry]
name = "hashreport"
version = "0.1.0"
description = "hashreport"
license = "AGPL-3.0"
authors = ["Jake Wells <jake@example.com>"]
keywords = [
  "checksum",
  "file",
  "hash",
  "hashing",
  "integrity",
  "report",
  "security",
  "utility",
  "verification"
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Utilities"
]

[tool.poetry.urls]
Documentation = "https://github.com/madebyjake/hashreport"
Repository = "https://github.com/madebyjake/hashreport"
Issues = "https://github.com/madebyjake/hashreport/issues"

[tool.poetry.scripts]
hashreport = "hashreport.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.2"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
isort = "^5.13.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88

[tool.coverage.run]
branch = true
source = "hashreport"

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
